<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.movingroot.flowassignment.presentation.ui.search.SearchViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            style="@style/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/title"
                android:text="@string/browse_book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/recently_browsed"
                android:textColor="@color/white"
                android:textSize="@dimen/subtitle"
                app:onSingleClick="@{() -> viewModel.toRecentRecords()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/below_header_pdd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/browse_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/browse_area_pdd"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/input_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/browse_area_pdd"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/browse_hint"
                    android:inputType="text"
                    android:text="@={viewModel.input}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="@dimen/input"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_browse"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_browse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:minHeight="@dimen/btn_browse_h"
                    android:text="@string/browse"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:onSingleClick="@{() -> viewModel.browse()}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/browse_area_pdd"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/browse_area" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/purple_200"
                android:visibility="@{viewModel.progressing ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/books_recycler"
                app:layout_constraintEnd_toEndOf="@id/books_recycler"
                app:layout_constraintStart_toStartOf="@id/books_recycler"
                app:layout_constraintTop_toTopOf="@id/books_recycler" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:focusable="true"
                android:visibility="@{viewModel.noData? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/browse_area">

                <TextView
                    android:id="@+id/no_data_text"
                    style="@style/no_data_text"
                    android:text="@string/no_browsed_result"
                    app:layout_constraintBottom_toTopOf="@id/no_data_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <ImageView
                    android:id="@+id/no_data_icon"
                    style="@style/no_data_icon"
                    android:src="@drawable/ic_cancel_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/no_data_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
